--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "authors": [
         {
             "name": "Mediaquery",
-            "homepage": "https://github.com/Mediaquery"
+            "homepage": "https://github.com/mediaquery"
         }
     ],
     "require": {
