--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,9 @@
         }
     ],
     "require": {
+        "php": "^5.6 || ^7.0",
+        "contao/core-bundle": "4.4.*",
+        "symfony/framework-bundle": "^4.1"
     },
     "conflict": {
         "contao/core": "*",
